--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <style> body {text-align: center}
      </style>
-    <body style="background-color:#5f5d61;"
+    <body style="background-color:#8a7373;"
     text="white">
     
     <h1>  Jibin's Porfolio</h1>
