--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>John Roe</title>
+    <title>Jibin Biju</title>
 </head>
 <body>
     <!-- Website Layout -->
@@ -81,7 +81,7 @@
                     </ul>
                     <ul class="right_profile">
                         <li><span class="profile_title">Profession</span><span>Web Designer</span></li>
-                        <li><span class="profile_title">Address</span><span>New York, India</span></li>
+                        <li><span class="profile_title">Address</span><span>New York, USA</span></li>
                         <li><span class="profile_title">Contact</span><span>347-539-2883</span></li>
                         <li><span class="profile_title">Email</span><span>jibinvbiju@gmail.com</span></li>
                         <li><span class="profile_title">Nationality</span><span>India</span></li>
