--- a/project.html
+++ b/project.html
@@ -83,7 +83,7 @@
                             <a href="https://jibin-biju.github.io/EyeMovement/"><i class="project_date">Eye Tracker</i></a> &emsp; <a href="https://github.com/Jibin-Biju/EyeMovement"><i class="project_date">Repo</i></a>
                             <p class="project_box_title">Description</p>
                             
-                            <p class="project_text">This project features CSS and JavaScript. The eye will follow the mouse as it goes anywhere in the screen. </p>
+                            <p class="project_text">This project features CSS and JavaScript. The eye will follow the mouse as it goes anywhere in the screen. The two eyes always focus on the direction of the mouse. </p>
                         </div>
                         <div class="project_box">
                             <p><a href="https://jibin-biju.github.io/BusTracker/"><img src="img/BusTracker.png" alt="Jibin Biju" style="width:150px;height:150px;"></a></p>
